# limbo

./: .gitignore  interface.cpp  interface.hpp  meson.build  meson_options.txt  optimizer_binding.py  optimizer_integration_example.py
.cursor/rules/: comments-rule.mdc
dummy_interface/: meson.build
dummy_interface/include/public/: dummy_state_optimizer.hpp
dummy_interface/src/: dummy_interface.cpp
exp/myExp/: main.cpp  params_myExp.txt  wscript
interface/: meson.build
interface/include/public/: interface.hpp  stateboptimizer.hpp
interface/src/: interface.cpp
snap_interface/: meson.build
snap_interface/include/private/: snap_state_optimizer.h  snap_state_optimizer.hpp
snap_interface/include/public/: snap_interface.h  snap_interface.hpp
snap_interface/src/: snap_interface.cpp
snap_optimizer/: snap_optimizer_interface.h
src/limbo/model/gp/: kernel_lf_opt.hpp  kernel_mean_lf_opt.hpp
